Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-04-03 11:44+0200\n"
+"PO-Revision-Date: 2010-06-11 21:07+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -111,10 +111,9 @@ msgstr "Tablo yorumları"
 #: tbl_indexes.php:189 tbl_printview.php:142 tbl_relation.php:402
 #: tbl_select.php:135 tbl_structure.php:177 tbl_tracking.php:273
 #: tbl_tracking.php:324
-#, fuzzy
 #| msgid "Column names"
 msgid "Column"
-msgstr "Sütun adları"
+msgstr "Sütun"
 
 #: db_datadict.php:175 db_printview.php:106 libraries/Index.class.php:443
 #: libraries/db_events.inc.php:31 libraries/db_routines.inc.php:42
@@ -8642,375 +8641,3 @@ msgstr "GÖRÜNÜM adı"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr "Görünümü yeniden şuna adlandır"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Yeni alan ekle"
-
-#~ msgid "Field"
-#~ msgstr "Alan"
-
-#~ msgid "Records"
-#~ msgstr "Kayıtlar"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Alanları sonlandıran:"
-
-#~ msgid "Fields"
-#~ msgstr "Alanlar"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "%s alan ekle"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "%s alanı kaldırıldı"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Resme/jpeg'e bakın: satıriçi"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"zip olarak\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzip olarak\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzip olarak\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Başlık içine özel yorum ekle (\\n satırları böler)"
-
-#~ msgid "and"
-#~ msgstr "ve"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Etkisizleştirildi"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Etkinleştirildi"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Onar"
-
-#~ msgid "Calendar"
-#~ msgstr "Takvim"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 uyumlu"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Varsayılan yapılandırma bundan yüklenemedi: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "&nbsp;%s&nbsp;sütunda indeks oluştur."
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Tablo oluştur"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Hiçbiri"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Tabloyu temizle (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Geçersiz sunucu indeksi: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Açıklama"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Hiçbiri"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr " \"%s\" veritabanının şeması - Sayfa %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr " \"%s\" tablosu yok!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Bu MySQL sunucusu <b>kopya etme</b> işlemleri içinde %s olarak çalışır. "
-#~ "Sunucudaki kopya etme durumuyla ilgili daha ayrıntılı bilgi için lütfen "
-#~ "<a href=\"#replication\">kopya etme bölümünü</a> ziyaret edin."
-
-#~ msgid "running on %s"
-#~ msgstr "%s üzerinde çalışıyor"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Ölçek, şemayı bir sayfaya sığdırmak için çok küçük"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Oturum hatasız olarak başlatılamıyor, lütfen PHP ve/veya web sunucusu "
-#~ "günlüğü dosyanızda verilen hataları kontrol edin ve PHP kurulumunuzu "
-#~ "düzgün olarak yapılandırın."
-
-#, fuzzy
-#~| msgid "Import currencies ($5.00 to 5.00)"
-#~ msgid "Import currencies (.00 to 5.00)"
-#~ msgstr "Parasalları içeri aktar ($5.00'dan 5.00'a)"
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Ancak son çalıştırmada hiç veri ayrıştırılmadı, bu genellikle, php zaman "
-#~ "sınırlarını arttırmadığınız sürece phpMyAdmin'in bu içeri aktarmayı "
-#~ "biteremeyeceği anlamına gelir."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Hiçbiri"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Hiçbiri"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Joker isimlere tüm yetkileri ver (kullanıcıadı\\_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr " \"%s\" tablosu yok!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Varsayılan yapılandırma bundan yüklenemedi: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "%1$s sunucusu için geçersiz anamakine. Lütfen yapılandırmanızı gözden "
-#~ "geçirin."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "%1$s tablo adını %2$s tablo adına değiştirme hatası"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "[a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] uzantısı "
-#~ "yüklenemiyor. Lütfen PHP yapılandırmanızı kontrol edin."
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as master in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as master in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Bu sunucu kopya etme işlemi sırasında asıl sunucu olarak "
-#~ "yapılandırılmadı. Bunu <a href=\"%s\">yapılandırmak</a> ister misiniz?"
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as slave in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as slave in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Bu sunucu kopya etme işlemi sırasında slave sunucu olarak "
-#~ "yapılandırılmadı. Bunu <a href=\"%s\">yapılandırmak</a> ister misiniz?"
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "MySQL sunucusuna bağlanamadı"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "SQL ayrıştırıcısında bir hata bulabilme ihtimaliniz var. Lütfen sorgunuzu "
-#~ "yakından dikkatli bir şekilde gözden geçirin ve tırnakların doğru ve "
-#~ "uyumsuz olmadığını kontrol edin. Diğer muhtemel hata nedenleri tırnaklı "
-#~ "metin alanının dışında binari ile dosya gönderiyor olmanız olabilir. Aynı "
-#~ "zamanda sorgunuzu MySQL komut satırı arabiriminde deneyebilirsiniz. Eğer "
-#~ "hata varsa, aşağıdaki MySQL sunucu hata çıktısı, sorunu teşhis etmenizde "
-#~ "ayrıca size yardımcı olabilir. Eğer hala sorunlarınız varsa ya da komut "
-#~ "satırı arabirimi başarılı olduğunda ayrıştırıcı başarısızsa, lütfen "
-#~ "sorunlara neden olan SQL sorgu girişinizi tek bir sorguya indirgeyin ve "
-#~ "aşağıdaki CUT bölümü içindeki veri yığını ile birlikte hata raporunu "
-#~ "gönderin:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Kopyala"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Kullanıcıları sil ve sonra da yetkileri yeniden yükle."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr "Bu en temiz yoldur fakat yetkileri yeniden yüklemek zaman alabilir."
-
-#~ msgid "has been altered."
-#~ msgstr "değiştirildi."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer bu işlevi desteklemiyor."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "&quot;Silinmiş&quot; kullanıcılar, yetkiler yeniden yüklenene kadar her "
-#~ "zaman olduğu gibi sunucuya hala erişilebileceklerdir."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Sadece kullanıcıları yetki tablolarından sil."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Depolanmış işlemlerin çalıştırılmasına izin verir; bu MySQL sürümünde "
-#~ "etkisi yoktur."
-
-#~ msgid "Process list"
-#~ msgstr "İşlem listesi"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Yetkileri yeniden yükle"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Kullanıcılar, yetkiler yeniden yüklenene kadar hala USAGE yetkisine sahip "
-#~ "olacaklar."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Bağımsız MS Excel biçimi"
-
-#~ msgid "Alter index(s)"
-#~ msgstr "İndeks(leri)i değiştir"
-
-#~ msgid "Tracking Mechanism"
-#~ msgstr "İzleme Mekanizması"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Tümünü Seç"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Tümünü Seç"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Ekle"
-
-#, fuzzy
-#~| msgid "Updated"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Güncellendi"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Sil"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d satır etkilendi."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Ocak0"
-
-#~ msgid "Jan1"
-#~ msgstr "Ocak1"
-
-#~ msgid "Jan2"
-#~ msgstr "Ocak2"
-
-#~ msgid ""
-#~ "Structure Difference' ;\n"
-#~ "$strStructureForView = 'Structure for view"
-#~ msgstr ""
-#~ "Yapı Farklılığı' ;\n"
-#~ "$strStructureForView = 'Görünüm yapısı"
