--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-11 21:10+0200\n"
+"PO-Revision-Date: 2010-06-11 21:11+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -455,10 +455,9 @@ msgid "Add/Delete criteria rows"
 msgstr "Kriter satırı Ekle/Sil"
 
 #: db_qbe.php:596
-#, fuzzy
 #| msgid "Add/Delete Field Columns"
 msgid "Add/Delete columns"
-msgstr "Alan Sütunları Ekle/Sil"
+msgstr "Sütun Ekle/Sil"
 
 #: db_qbe.php:609 db_qbe.php:634
 msgid "Update Query"
