Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -1005,10 +1005,9 @@ msgid "Please select the primary key or a unique key"
 msgstr "Lütfen birincil anaktarı veya benzersiz anahtarı seçin"
 
 #: js/messages.php:63 pmd_general.php:77 tbl_relation.php:548
-#, fuzzy
 #| msgid "Choose field to display"
 msgid "Choose column to display"
-msgstr "Göstermek için alan seçin"
+msgstr "Göstermek için sütun seçin"
 
 #. l10n: Display text for calendar close link
 #: js/messages.php:73
