--- a/po/tr.po
+++ b/po/tr.po
@@ -1011,10 +1011,9 @@ msgstr "Göstermek için sütun seçin"
 
 #. l10n: Display text for calendar close link
 #: js/messages.php:73
-#, fuzzy
 #| msgid "Donate"
 msgid "Done"
-msgstr "Bağış"
+msgstr "Bitti"
 
 #. l10n: Display text for previous month link in calendar
 #: js/messages.php:75
