--- a/po/tr.po
+++ b/po/tr.po
@@ -1050,10 +1050,9 @@ msgid "March"
 msgstr "Mart"
 
 #: js/messages.php:85
-#, fuzzy
 #| msgid "Apr"
 msgid "April"
-msgstr "Nis"
+msgstr "Nisan"
 
 #: js/messages.php:86
 msgid "May"
