Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -1098,7 +1098,7 @@ msgstr "Oca"
 #. l10n: Short month name
 #: js/messages.php:99 libraries/common.lib.php:1559
 msgid "Feb"
-msgstr "Şubat"
+msgstr "Şub"
 
 #. l10n: Short month name
 #: js/messages.php:101 libraries/common.lib.php:1561
