Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -1169,7 +1169,7 @@ msgstr "Salı"
 
 #: js/messages.php:125
 msgid "Wednesday"
-msgstr ""
+msgstr "Çarşamba"
 
 #: js/messages.php:126
 msgid "Thursday"
