Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -1182,7 +1182,7 @@ msgstr "Cuma"
 
 #: js/messages.php:128
 msgid "Saturday"
-msgstr ""
+msgstr "Cumartesi"
 
 #. l10n: Short week day name
 #: js/messages.php:132 libraries/common.lib.php:1582
