--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-11 21:16+0200\n"
+"PO-Revision-Date: 2010-06-11 21:17+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1223,7 +1223,7 @@ msgstr "Ctesi"
 #: js/messages.php:148
 #| msgid "Sun"
 msgid "Su"
-msgstr "Pa"
+msgstr "Paz"
 
 #. l10n: Minimal week day name
 #: js/messages.php:150
