--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-11 21:47+0200\n"
+"PO-Revision-Date: 2010-06-12 15:19+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1754,7 +1754,7 @@ msgstr "SQL'i onayla"
 
 #: libraries/common.lib.php:1278
 msgid "Inline edit of this query"
-msgstr ""
+msgstr "Bu sorguyu sıralı düzenle"
 
 #: libraries/common.lib.php:1280
 #, fuzzy
