--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 15:19+0200\n"
+"PO-Revision-Date: 2010-06-12 15:20+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1984,10 +1984,9 @@ msgid "Password Hashing"
 msgstr "Parola Hesaplanıyor"
 
 #: libraries/display_change_password.lib.php:66
-#, fuzzy
 #| msgid "MySQL&nbsp;4.0 compatible"
 msgid "MySQL 4.0 compatible"
-msgstr "MySQL&nbsp;4.0 uyumlu"
+msgstr "MySQL 4.0 uyumlu"
 
 #: libraries/display_change_password.lib.php:72
 #: libraries/replication_gui.lib.php:360 server_privileges.php:822
